[iOS] Prompt for requestStorageAccess is inverted in WKWebView https://bugs.webkit.org/show_bug.cgi?id=214198 <rdar://problem/65369725>

Reviewed by Darin Adler.

The labels for "allow" and "deny" StorageAccess API were inverted in the WKWebView
implementation.

* UIProcess/Cocoa/WKStorageAccessAlert.mm:
(WebKit::presentStorageAccessAlert):


Canonical link: https://commits.webkit.org/227031@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264266 268f45cc-cd09-0410-ab3c-d52691b4dbfc